--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,11 @@
+:root {
+  --green: #67bf52;
+  --black: #555555;
+  --grey: #eaeaea;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -24,15 +19,16 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.chart-line {
+  animation: dash 8s linear forwards;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+@keyframes dash {
   to {
-    transform: rotate(360deg);
+    stroke-dashoffset: 0;
   }
+}
+
+.labeltext {
+  /* font-size: 0.8rem; */
 }
