--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   --red: #bf526d;
   --black: #555555;
   --grey: #eaeaea;
+  --bluegrey: #eaf2f9;
+  --navy: #142850;
+  --blue: #2790c9;
+  --lightblue: #abdafc;
+  --purple: #7b77f5;
+  --pink: #c1b5ff;
 }
 
 .App {
@@ -39,39 +45,72 @@
 
 /*LEGEND*/
 
-.legend__region {
+.table__row {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   border-bottom: 1px solid var(--grey);
   font-size: calc(0.7rem + 0.3vw);
+  text-align: left;
 }
 
-.legend__region--head {
+.table__row--blueborder {
+  border-bottom: 1px solid var(--blue);
+}
+
+.table__rowclip {
+  position: absolute;
+  background-color: var(--bluegrey);
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  animation: fill 1s;
+}
+
+@keyframes fill {
+  0% {
+    clip-path: polygon(0 0, 0 100%, 0% 100%, 0% 0%);
+  }
+}
+
+.table__row--head {
   margin-top: 30px;
   font-weight: bold;
 }
 
-.legend__flexcontainer {
-  display: flex;
-  align-items: center;
+.table__row--datapadded .table__data {
+  margin-bottom: 10px;
 }
 
-.legend__symbol {
-  height: 1rem;
-  width: 1rem;
-  border-radius: 50%;
+.table__industrytitle {
+  color: var(--blue);
+}
+
+.table__flexcontainer {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.table__symbol {
+  min-height: 1rem;
+  min-width: 1rem;
   margin: 12px;
 }
 
-.legend__datacontainer {
+.table__symbol--circle {
+  border-radius: 50%;
+}
+
+.table__datacontainer {
   width: 50%;
   min-width: 200px;
 }
 
-.legend__data {
+.table__data {
   text-align: right;
-  width: 30%;
+  width: 24%;
   margin-right: 4px;
 }
